force-app/main/default/objects/Bank_Account_Balance__c/Bank_Account_Balance__c.object-meta.xml
<CustomObject>
    <label>Bank Account Balance</label>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>