force-app/main/default/objects/Bank_Account_Balance__c/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <formula>Bank_Account_Detail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Description</label>
    <type>Text</type>
</CustomField>