force-app/main/default/objects/Bank_Account_Balance__c/fields/account_number__c.field-meta.xml
<CustomField>
    <fullName>account_number__c</fullName>
    <formula>Bank_Account_Detail__r.Bank_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account number</label>
    <type>Text</type>
</CustomField>