force-app/main/default/objects/Bank_Account_Balance__c/fields/As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_of_Date__c</fullName>
    <formula>DATEVALUE( As_of_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>