force-app/main/default/objects/Bank_Account_Balance__c/fields/As_of_DateTime__c.field-meta.xml
<CustomField>
    <fullName>As_of_DateTime__c</fullName>
    <label>As of Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>