force-app/main/default/objects/Bank_Account_Balance__c/fields/Bank_Account_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Detail__c</fullName>
    <label>Bank Account Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Account__r.Name</field>
            <operation>equals</operation>
            <value>Incomlend Operations</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Account Balances</relationshipLabel>
    <relationshipName>Bank_Account_Balances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>