force-app/main/default/objects/Bank_Account_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>As_of_DateTime__c</columns>
    <columns>Bank_Account_Detail__c</columns>
    <columns>Currency__c</columns>
    <columns>amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>As_of_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2019</value>
    </filters>
    <label>All</label>
</ListView>