force-app/main/default/objects/Bank_Account_Balance__c/listViews/USD.listView-meta.xml
<ListView>
    <fullName>USD</fullName>
    <columns>NAME</columns>
    <columns>As_of_DateTime__c</columns>
    <columns>account_number__c</columns>
    <columns>Account_Description__c</columns>
    <columns>amount__c</columns>
    <columns>Currency__c</columns>
    <columns>Bank_Account_Detail__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>USD</label>
</ListView>